--- a/awards.html
+++ b/awards.html
@@ -134,6 +134,7 @@
         <title>
             Zherong Wu at Cornell University - Awards
         </title>
+		<style>.hJDwNd-AhqUyc-II5mzb{display:none;}.hJDwNd-AhqUyc-OiUrBf{width:100%;}</style>		
         <style jsname="ptDGoc" nonce="qYJu9grCpMaOGngFR65MBA">
             .ImnMyf{background-color: rgba(255,255,255,1); color: rgba(33,33,33,1);}.Vs12Bd{background-color:
             rgba(240,240,240,1); color: rgba(33,33,33,1);}.S5d9Rd{background-color:
@@ -688,13 +689,7 @@
                                     jsaction="transitionend:UD2r5">
                                         <a class="XMyrgf" href="about.html">
                                             <img src="cRl_LvQRQD3yfRkdNZ391k8tbrepGc4UX9E6xWLZJEwbepqJlx0fy6gg9UJ5iYMeuilewhx1qOJFlvDNYkHGwnY=w16383.png"
-                                            class="r9CsCb" role="img" aria-label="Site home">
-                                        </a>
-                                        <a class="Zjiec oNsfjf" href="about.html">
-                                            <span>
-                                                Zherong Wu at Cornell University
-                                            </span>
-                                        </a>
+                                            class="r9CsCb" role="img" aria-label="Site home"></a><a class="Zjiec oNsfjf" href="about.html"><span>Zherong Wu at Cornell University</span></a>
                                         <ul class="jYxBte Fpy8Db" role="navigation" tabindex="-1">
                                             <li jsname="ibnC6b" data-nav-level="1">
                                                 <div class="PsKE7e r8s4j-R6PoUb IKA38e baH5ib oNsfjf">
@@ -769,11 +764,7 @@
                                             <div jsname="I8J07e" class="TlfmSc YSH9J">
                                                 <a class="GAuSPc" jsname="jIujaf" href="about.html">
                                                     <img src="cRl_LvQRQD3yfRkdNZ391k8tbrepGc4UX9E6xWLZJEwbepqJlx0fy6gg9UJ5iYMeuilewhx1qOJFlvDNYkHGwnY=w16383.png"
-                                                    class="lzy1Td" role="img" aria-label="Site home" jsname="SwcDWb">
-                                                    <span class="QTKDff p46B7e">
-                                                        Zherong Wu at Cornell University
-                                                    </span>
-                                                </a>
+                                                    class="lzy1Td" role="img" aria-label="Site home" jsname="SwcDWb"><span class="QTKDff p46B7e">Zherong Wu at Cornell University</span></a>
                                             </div>
                                             <nav class="plFg0c" jscontroller="HXO1uc" jsaction="rcuQ6b:rcuQ6b;MxH79b:CfS0pe;"
                                             id="WDxLfe" data-is-preview="false" role="navigation"
@@ -1501,7 +1492,7 @@
         <div jscontroller="YV8yqd" jsaction="rcuQ6b:npT2md">
         </div>
         <script src="jquery-3.4.0.min.js"></script>
-		<style>.WIdY2d,.YMEQtf{display:none;}.xjKiLb{display:none;}</style>
+		<style>.WIdY2d,.YMEQtf{display:none;}.xjKiLb{display:none;}.hJDwNd-AhqUyc-II5mzb{display:none;}.hJDwNd-AhqUyc-OiUrBf{width:100%;}</style>
         <script nonce="5qXN1AD5x9-XYu-3ldSAZQ">
          $(document).ready(function() { 
             $(".wFCWne").click(function() { 
