--- a/service.html
+++ b/service.html
@@ -138,6 +138,7 @@
         <title>
             Zherong Wu at Cornell University - Service
         </title>
+		<style>.hJDwNd-AhqUyc-II5mzb{display:none;}.hJDwNd-AhqUyc-OiUrBf{width:100%;}</style>		
         <style jsname="ptDGoc" nonce="dA1TZSs7EFNRYoUZiSvPBg">
             .ImnMyf{background-color: rgba(255,255,255,1); color: rgba(33,33,33,1);}.Vs12Bd{background-color:
             rgba(240,240,240,1); color: rgba(33,33,33,1);}.S5d9Rd{background-color:
@@ -1431,7 +1432,7 @@
         <div jscontroller="YV8yqd" jsaction="rcuQ6b:npT2md">
         </div>
         <script src="jquery-3.4.0.min.js"></script>
-		<style>.WIdY2d,.YMEQtf{display:none;}.xjKiLb{display:none;}</style>
+		<style>.WIdY2d,.YMEQtf{display:none;}.xjKiLb{display:none;}.hJDwNd-AhqUyc-II5mzb{display:none;}.hJDwNd-AhqUyc-OiUrBf{width:100%;}</style>
         <script nonce="5qXN1AD5x9-XYu-3ldSAZQ">
          $(document).ready(function() { 
             $(".wFCWne").click(function() { 
