--- a/index.html
+++ b/index.html
@@ -1255,6 +1255,20 @@
                                                                         </p>
                                                                         <p dir="ltr" class="zfr3Q CDt4Ke " style="text-align: justify;">
                                                                             <span class="C9DxTc " style="font-family: Lato, Arial; font-weight: 700;">
+                                                                                News
+                                                                            </span>
+                                                                        </p>
+                                                                        <ul class="n8H08c UVNKR " style="list-style-type: square; margin-left: 0; margin-right: 0; padding: 0;">
+                                                                            <li dir="ltr" class="zfr3Q TYR86d eD0Rn " style="margin-left: 15.0pt;">
+                                                                                <p dir="ltr" role="presentation" class="zfr3Q CDt4Ke " style="margin-left: 0.0pt; padding-left: 0.0pt; text-align: justify; text-indent: 0.0pt;">
+                                                                                    <span class="C9DxTc " style="">
+                                                                                        <a href="#" style="color: #000;">[08/2023]xxxx</a>
+                                                                                    </span>
+                                                                                </p>
+                                                                            </li>
+	                                                                    </ul> 																		
+                                                                        <p dir="ltr" class="zfr3Q CDt4Ke " style="text-align: justify;">
+                                                                            <span class="C9DxTc " style="font-family: Lato, Arial; font-weight: 700;">
                                                                                 Research Interests
                                                                             </span>
                                                                         </p>
